riscv_routine_grammar.txt
S        ::= Title InsList $             // pred: {Numbers, a, b, c, d, e, f}

Title    ::= Hex LblName ':' '\n'        // pred: {Numbers, a, b, c, d, e, f}

InsList  ::= Ins InsList                 // pred: {Numbers, a, b, c, d, e, f}
           | null                        // pred: {'\n', $}

Ins      ::= Hex ':' Hex Op ArgList '\n' // pred: {Numbers, a, b, c, d, e, f}

ArgList  ::= Arg MoreArgs                // pred: {arbitaray string w/o ws}
           | null                        // pred: {'\n'}

MoreArgs ::= ',' Arg MoreArgs            // pred: {','}
           | null                        // pred: {'\n'}

Lbl      ::= LblName                     // pred: {'<'}
           | null                        // pred: {',', '\n'}

LblName  ::= '<' Name '>'                // pred: {'<'}

Arg      ::= {arbitaray string w/o ws(reg names, imm or offset)} Lbl
Hex      ::= {Numbers, a, b, c, d, e, f}+
Name     ::= {arbitaray string w/o ws}
Op       ::= {arbitaray string w/o ws}
